# launchfile_jetson

perception/: CMakeLists.txt  README.md  package.xml
perception/config/: OAKDW_left.yaml  fsds_left.yaml  fsds_right.yaml
perception/launch/: amp_depthai.launch.py  amp_perception.launch.py  amp_sim.launch.py  test.launch.py
perception/position_estimation/: depthai_detection.py  disparity_estimator.py  keypoints_estimator.py  stereo_pipeline.py
perception/ros2/: camera_info_pub.py  depthai_camera_node.py  depthai_position_estimator.py  position_estimator.py  test_node.py
perception/src/: test_node.py
perception/stereo_camera/: cone_detection.py
